[tool.poetry]
name = "coding-challenge"
version = "0.1.0"
description = "A Basic Coding Challenge"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coding_challenge"}]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.9.1"
flask = "^2.2.3"
dash-bootstrap-components = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
